--- a/hrms-api/hrms/src/main/resources/application.properties.example
+++ b/hrms-api/hrms/src/main/resources/application.properties.example
@@ -7,3 +7,7 @@ spring.datasource.password=DBPASSWORD
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
+
+#jwt related things
+jwt.secret=YOUR_SECREAT_KEY
+jwt.expiry=10
