--- a/hrms-ui/package.json
+++ b/hrms-ui/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.2.0",
     "react-form-hook": "^0.0.1",
     "react-hook-form": "^7.71.1",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.13.0",
     "tailwindcss": "^4.1.18"
   },
