--- a/hrms-ui/package.json
+++ b/hrms-ui/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.11.2",
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-query": "^5.90.21",
     "axios": "^1.13.5",
@@ -20,6 +21,7 @@
     "react-form-hook": "^0.0.1",
     "react-hook-form": "^7.71.1",
     "react-hot-toast": "^2.6.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.13.0",
     "tailwindcss": "^4.1.18"
   },
